--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "js-cookie": "^3.0.1",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-socks": "^2.2.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
